[package]
name = "jutsushi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12"
#bevy = { version = "0.12", features = ["dynamic_linking"] }

[profile.dev]
opt-level = 1
package."*".opt-level = 2
